--- a/appspec.json
+++ b/appspec.json
@@ -1,21 +1,69 @@
 {
   "settings": [
+            {
+      "id": "min_act_change",
+      "name": "Minimum activity change",
+      "description": "Insert the minimum change value of activity measure that you require within the below defined time interval. If the activity measure does not change by at least this value, the activity alert will be set to 1.",
+      "defaultValue": null,
+      "type": "DOUBLE"
+    }
+	    {
+      "id": "time_itv",
+      "name": "Time interval to check for mortality",
+      "description": "Define the value of the time interval length (unit below) which shall be checked for mortality indications of each track. Make sure that more than one measuement is expected in the time interval. Note that the interval timing can differ by track according to the timestamp of last available measurement.",
+      "defaultValue": null,
+      "type": "DOUBLE"
+    }
     {
-      "id": "year",
-      "name": "The year.",
-      "description": "Insert description for the year setting setting",
-      "defaultValue": 2022,
-      "type": "INTEGER"
+      "id": "time_unit",
+      "name": "Time unit for interval.",
+      "description": "Select which time unit to use for the above defined time interval. Note that this unit will be used as divisor unit for the estimated rate of change of voltage.",
+      "defaultValue": "hours",
+      "type": "RADIOBUTTONS",
+      "options": [
+        {
+          "value": "hours",
+          "displayText": "hour(s)"
+        },
+		        {
+          "value": "days",
+          "displayText": "day(s)"
+        },
+		        {
+          "value": "week",
+          "displayText": "week(s)"
+        }
+      ]
+    },
+    {
+      "id": "circ",
+      "name": "Range of circular activity measures",
+      "description": "Insert the number of different activity measures. Default 256 (for values between 0 and 255)",
+      "defaultValue": 256,
+      "type": "DOUBLE"
+    },
+	{
+      "id": "volt.name",
+      "name": "Name of voltage attribute",
+      "description": "Please insert the name of the tag voltage attribute in your data. Check the correct spelling in the summary view's track attributes section of the preceding App.",
+      "defaultValue": "tag_voltage",
+      "type": "STRING"
+    },
+	{
+      "id": "activity.name",
+      "name": "Name of activity count attribute",
+      "description": "Please insert the name of the activity count attribute in your data. Check the correct spelling in the summary view's track attributes section of the preceding App.",
+      "defaultValue": "activity_count",
+      "type": "STRING"
     }
   ],
   "dependencies": {
     "R": [
       {
-        "name": "lubridate",
-        "version": "1.7.10"
+        "name": "move2"
       },
       {
-        "name": "move"
+        "name": "dplyr"
       }
     ]
   },
@@ -25,39 +73,36 @@
   },
   "language": "eng",
   "keywords": [
-    "example",
-    "template"
+    "mortality",
+    "activity measure",
+	"accessory measure",
+	"tag voltage",
+	"alert"
   ],
   "people": [
     {
-      "firstName": "Charles",
+      "firstName": "Andrea",
       "middleInitials": null,
-      "lastName": "Darwin",
-      "email": "creator@example.com",
-      "roles": [
-        "author",
-        "creator"
-      ],
-      "orcid": null,
-      "affiliation": null,
-      "affiliationRor": null
-    }
-  ],
-  "funding": [
-    {
-      "name": "funder name",
-      "comment": "grant for App"
-    }
-  ],
-  "references": [
-    {
-      "type": "IsDescribedBy",
-      "note": "Darwin, C. 1900. The creation. Journal XY. 1-2",
-      "url": "https://anylink.xyz"
+      "lastName": "Kölzsch",
+      "email": "akoelzsch@ab.mpg.de",
+      "roles": ["author", "creator"],
+      "orcid": "0000-0003-0193-1563",
+      "affiliation": "Max-Planck-Institute of Animal Behavior",
+      "affiliationRor": "https://ror.org/026stee22"
+    },
+		{
+      "firstName": "Corinne",
+      "middleInitials": null,
+      "lastName": "Kendall",
+      "email": "Corinne.Kendall@nczoo.org",
+      "roles": ["contributor","funder"],
+      "orcid": "",
+      "affiliation": "North Carolina Zoo",
+      "affiliationRor": ""
     }
   ],
   "documentation": {
-    "url": "https://github.com/yourAccount/my-app/README.md"
+    "url": "https://github.com/movestore/Mortality_by_Activity_Sensor#readme"
   }
 }
 
